# gaussian-process-rs

./: Cargo.toml
src/: kernel_matrix.rs  main.rs
