[package]
name = "gaussian-process"
version = "0.1.0"
authors = ["Kimura Yu <33382781+KimuraYu45z@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_distr = "0.4.0"
thiserror = "1.0.24"
rayon = "1.5.0"
plotters = "0.3.1"
opensrdk-linear-algebra = "0.6.7"
opensrdk-kernel-method = "0.1.5"
opensrdk-optimization = "0.1.3"
blas-src = { version = "0.8", features = ["intel-mkl"] } 
lapack-src = { version = "0.8", features = ["intel-mkl"] }

[dev-dependencies]
